istio/stage-pipeline-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stage-vs
  namespace: staging
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/pipeline-gateway
  http:
  - name: stage-apache-airflow
    match:
    - uri:
        prefix: /stage-airflow
    rewrite:
      uri: /stage-airflow
    route:
    - destination:
        port:
          number: 8080
        host: airflow-svc.stage-airflow.svc.cluster.local
